--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc:
   carousel_slider: ^4.2.1
   google_nav_bar: ^5.0.6
+  youtube_player_flutter: ^8.1.2
   
 
 dev_dependencies:
