--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   carousel_slider: ^4.2.1
   google_nav_bar: ^5.0.6
   youtube_player_flutter: ^8.1.2
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  google_fonts:
   
 
 dev_dependencies:
